welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: value update is not a member of Int
	if (getX() = l && getY() == h) {
            ^